--- a/15-03.Mai/content/diskussion.tex
+++ b/15-03.Mai/content/diskussion.tex
@@ -1,2 +1,13 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+
+Die berechneten Exponenten aus dem Kapitel (\ref{sec:K}) weichen von dem Referenzwert $I = 1.5$, aus der Gleichung (\ref{eqn:jLS}), um
+\begin{align*}
+  \text{Exponent von}\ & I_1 = \num{1.379 +- 0.001} \ , \\
+  \text{Abweichung vom Referenzwert:}\ & \frac{I - I_1}{I_1} \cdot 100 = 8.77\% \\
+  \text{Exponent von}\ & I_2 = \num{1.345 +- 0.002} \\
+  \text{Abweichung vom Referenzwert:}\ & \frac{I - I_2}{I_2} \cdot 100 = 11.52\%
+\end{align*}
+ab. \\
+Die Kathodentemperaturen aus den Kapiteln (\ref{sec:A}) und (\ref{sec:L}) stimmen in der Größenordnung überein und können somit als gelungene Messungen betrachtet werden. \\
+Der errechnete Mittelwert der Austrittsarbeit für Wolfram beträgt 4.782 eV und weicht damit um 5.8 \% von dem Literaturwert ab. Der Literaturwert für die Austrittsarbeit beträgt 4.5 eV.
