--- a/15-03.Mai/main.tex
+++ b/15-03.Mai/main.tex
@@ -1,7 +1,7 @@
 \input{header.tex}
 
-\subject{504}
-\title{Thermische Elektronenemission}
+\subject{Versuch Nummer 504}
+\title{Thermische Elektronenemissionen}
 \date{
   Durchführung: 03.05.2016
   \hspace{3em}
