Verbesserung Protokoll auswertung und disskussion

--- a/14-26.April/header.tex
+++ b/14-26.April/header.tex
@@ -118,6 +118,9 @@
 % Trennung von Wörtern mit Strichen
 \usepackage[shortcuts]{extdash}
 
+%ermöglicht Teilen von Tabellenzeilen
+\usepackage{multirow}
+
 \author{
   Maximilian Sackel%
   \texorpdfstring{
