Theorie und Durchführung fertig

--- a/14-26.April/content/auswertung.tex
+++ b/14-26.April/content/auswertung.tex
@@ -1,11 +1,11 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 \subsection{Verifizieren der Linsengleichung}
-Um das Abbildungsgesetz sowie die Linsengleichung (Gleichungen \eqref{eqn:V} und \eqref{eqn:D}) zu verifizieren sind die dafür relevanten Messwerte in Tabelle \ref{tab:VdA} aufgetragen. Die Gegenstandsgröße des Pearl L beträgt 
+Um das Abbildungsgesetz sowie die Linsengleichung (Gleichungen \eqref{eqn:V} und \eqref{eqn:D}) zu verifizieren sind die dafür relevanten Messwerte in Tabelle \ref{tab:VdA} aufgetragen. Die Gegenstandsgröße des Perl L beträgt
 \begin{equation}
   G = 3.0 \cdot 10^{-2} \, \text{m} \ .
-\end{equation} 
-Die Vergrößerungen werden entsprechen $V_1 = \frac{b}{g}$ und $V_2 = \frac{B}{G}$ berechnet und sowie deren relative Messabweichung in der Tabelle \ref{tab:VdA} aufgelistet. Die Brennweite zu den Bildweiten $b$ sowie Gegenstandsweiten $G$ werden mittels der Linsengleichung (Gleichung \eqref{eqn:D}) berechnet und ebenfalls in der Tabelle aufgelistet. 
+\end{equation}
+Die Vergrößerungen werden entsprechen $V_1 = \frac{b}{g}$ und $V_2 = \frac{B}{G}$ berechnet und deren relative Messabweichung in der Tabelle \ref{tab:VdA} aufgelistet. Die Brennweite zu den Bildweiten $b$ sowie Gegenstandsweiten $G$ werden mittels der Linsengleichung (Gleichung \eqref{eqn:D}) berechnet und ebenfalls in der Tabelle aufgelistet.
 \begin{table}
   \centering
   \begin{tabular}{c c c | c | c c c c}
@@ -30,25 +30,25 @@ Die Vergrößerungen werden entsprechen $V_1 = \frac{b}{g}$ und $V_2 = \frac{B}{
   \caption{Messwerte und berechnete Größen zur Verifizierung des Abbildungsgesetzes und Linsengleichung}
   \label{tab:VdA}
 \end{table}
-Das Abbildungsgesetz wurde durch die Messung bestätig, da die Werte einen Fehler von durchschnittlich 3.5 \% aufweisen. Dies liegt innerhalb des Toleranzbereichs der Messunsicherheit bei den Versuchen im Praktikum. Die Linsengleichung ist ebenso verifiziert worden da die durchschnittliche Brennweite einen Fehler von 2\% aufweist gegenüber der Herrstellerangabe von 
+Das Abbildungsgesetz wurde durch die Messung bestätig, da die Werte einen Fehler von durchschnittlich 3.5 \% aufweisen. Dies liegt innerhalb des Toleranzbereichs der Messunsicherheit bei den Versuchen im Praktikum. Die Linsengleichung ist ebenso verifiziert worden da die durchschnittliche Brennweite einen Fehler von 2\% aufweist gegenüber der Herrstellerangabe von
 \begin{equation}
-  f_\text{Hersteller} = 10^{-1} \, \text{m} \ .
+  f_\text{Hersteller} = 1.0 \cdot 10^{-1} \, \text{m} \ .
   \label{eqn:fHer1}
 \end{equation}
-\subsection{Bestimmung einer Bekannten sowie Unbekannten Brennweite}
-Die Brennweite der bekannten Linse wurde bereits im Vorherigen Kapitel mit Hilfe der Linsengleichung bestimmt. Zusätzlich wird die Brennweite mit Hilfe eines Plots bestimmt. Dafür wird die Gegenstandsweiten auf die Y-Achse des Koordinatensystems aufgetragen werden und mit den entsprechenden Bildweiten, welche auf der X-Achse aufgetragen sind, verbunden werden. Aus dem Schnittpunkt der Graden lässt sich die Brennweite der Linse ablesen. Aus Abbildung \ref{fig:fibek} wird die Brennweite
+\subsection{Bestimmung einer bekannten sowie unbekannten Brennweite}
+Die Brennweite der bekannten Linse wurde bereits im vorherigen Kapitel mit Hilfe der Linsengleichung bestimmt. Zusätzlich wird die Brennweite mit Hilfe eines Plots bestimmt. Dafür werden die Gegenstandsweiten auf die y-Achse des Koordinatensystems aufgetragen werden und mit den entsprechenden Bildweiten, welche auf der x-Achse aufgetragen sind, verbunden werden. Aus dem Schnittpunkt der Geraden lässt sich die Brennweite der Linse ablesen. Aus Abbildung \ref{fig:fibek} wird die Brennweite
 \begin{equation}
   f_\text{abgelesen} = (\num{9.8 +- 0.4}) 10^{-2} \, \text{m}
   \label{eqn:fbek}
 \end{equation}
-abgelesen. 
+abgelesen.
 \begin{figure}
   \centering
   \includegraphics[height=8cm]{bekannt.pdf}
   \caption{Brennweite einer bekannten Linse}
   \label{fig:fibek}
 \end{figure}
-Die Messung wird für eine Linse mit unbekannter Brechkraft wiederhholt. Die Messdaten und die Brennweiten sind in Tabelle \ref{tab:funb} aufgetragen.
+Die Messung wird für eine Linse mit unbekannter Brechkraft wiederholt. Die Messdaten und die Brennweiten sind in Tabelle \ref{tab:funb} aufgetragen.
 \begin{table}
   \centering
   \begin{tabular}{c c| c}
@@ -73,7 +73,7 @@ Die Messung wird für eine Linse mit unbekannter Brechkraft wiederhholt. Die Mes
   \caption{Gemessene Bild-, Gegenstandsweite und errechnete Brennweite einer unbekannten Linse}
   \label{tab:funb}
 \end{table}
-Aus dem Diagramm \ref{fig:fiunb} lässt sich eine Brennweite von 
+Aus dem Diagramm \ref{fig:fiunb} lässt sich eine Brennweite von
 \begin{equation}
   f_\text{unbekannt} = (\num{11.9 +- 2.3}) \, \text{m}
   \label{eqn:unb}
@@ -85,8 +85,8 @@ ablesen.
   \caption{Brennweite einer unbekannten Linse}
   \label{fig:fiunb}
 \end{figure}
-\subsection{Besselmethode}
-Die entsprechenden Messdaten zu dem Versuch sind in Tabelle \ref{tab:ffw} zu finden.  Dabei wird die Brennweite nach Formel \eqref{eqn:tbes} berechnet, wobei der Abstand $d = g - b$ und die Gegenstandsweite als $g = e - b$ demenstsprechend definiert ist.
+\subsection{Verfahren nach Bessel}
+Die entsprechenden Messdaten zu dem Versuch sind in Tabelle \ref{tab:ffw} zu finden. Dabei wird die Brennweite nach Formel \eqref{eqn:tbes} berechnet, wobei der Abstand $d = g - b$ und die Gegenstandsweite als $g = e - b$ demenstsprechend definiert ist.
 \begin{table}
   \centering
   \begin{tabular}{c c c | c c}
@@ -98,8 +98,8 @@ Die entsprechenden Messdaten zu dem Versuch sind in Tabelle \ref{tab:ffw} zu fin
 	95.0	& 11.6	& 84.4	& 10.18	& 9.42	\\
 	92.5	& 11.6	& 81.6	& 10.15	& 9.62	\\
 	90.0	& 11.7	& 79.1	& 10.18	& 9.58	\\
-	87.5	& 11.7	& 76.5	& 10.14	& 8.62	\\	
-	85.0	& 11.8	& 75.1	& 10.16	& 7.75	\\	
+	87.5	& 11.7	& 76.5	& 10.14	& 8.62	\\
+	85.0	& 11.8	& 75.1	& 10.16	& 7.75	\\
 	82.5	& 11.9	& 73.6	& 10.18	& 9.94	\\
 	80.0	& 11.9	& 68.9	& 10.13	& 9.56	\\
 	77.5	& 12.1	& 66.4	& 10.21	& 9.51	\\
@@ -110,23 +110,23 @@ Die entsprechenden Messdaten zu dem Versuch sind in Tabelle \ref{tab:ffw} zu fin
   	\caption{Brennweite von weißem Licht}
   \label{tab:ffw}
 \end{table}
-Aus Mittlung der einzelnen Messwerte erhält man durch die Besselmethode eine experimentell bestimmte Brennweite fürweißes Licht von 
+Aus der Mittelung der einzelnen Messwerte erhält ??man?? durch das Bessel-Verfahren eine experimentell bestimmte Brennweite für weißes Licht von
 \begin{equation}
   f_\text{exp} = (\num{9.73 +- 0.13}) 10^{-2} \, \text{m} \ .
   \label{eqn:fexp}
 \end{equation}
-Wenn der Fehler aus den Zwischensummen der einzelnen Brennweiten $f_1$ und $f_2$ genommen wird beträgt er 
+Wenn der Fehler aus den Zwischensummen der einzelnen Brennweiten $f_1$ und $f_2$ genommen wird beträgt er
 \begin{equation}
-  \Delta \overline{f_\text{exp}} = 0.43 \cdot 10^{-2} \, \text{m} 
+  \Delta \overline{f_\text{exp}} = 0.43 \cdot 10^{-2} \, \text{m}
   \label{eqn:fehlerkomisch}
 \end{equation}
-Für den Versuch wurde eine Linse mit einer Brennweite von 
+Für den Versuch wurde eine Linse mit einer Brennweite von
 \begin{equation}
-  f_\text{Hersteller} = 10 \cdot 10^{-2} \, \text{m} \ 
+  f_\text{Hersteller} = 10 \cdot 10^{-2} \, \text{m} \
   \label{eqn:fHer}
 \end{equation}
 verwendet.
-Anschließend wird die Brechkraft von farbigen Licht bestimmt. Dazu wird zunächst ein roter und anschließend ein blauer Farbfilter vor die Lampe gespannt.
+Anschließend wird die Brechkraft von farbigem Licht bestimmt. Dazu wird zunächst ein roter und anschließend ein blauer Farbfilter vor die Lampe gespannt.
 \begin{table}
   \centering
   \begin{tabular}{c | c c c || c c c}
@@ -147,31 +147,31 @@ Aus Tabelle \ref{tab:fbesslf} ergibt sich für rotes Licht eine Brennweite von
 \begin{equation}
   f_\text{rot} = (\num{9.60 +- 0.01}) \, 10^{-2} \, \text{m}
   \label{eqn:frot}
-\end{equation} 
-und für blaues Licht eine Brennweite von 
+\end{equation}
+und für blaues Licht eine Brennweite von
 \begin{equation}
   f_\text{blau} = (\num{9.49 +- 0.03}) \, 10^{-2} \, \text{m} \ .
   \label{fblau}
 \end{equation}
 
-\subsection{Methode nach Abbe}
-Es sollen die Hauptebene und die Brennweite mit Hilfe der Formeln \eqref{eqn:g'} und \eqref{eqn:b'} bestimmt werden. Es wird eine Zerstreuungslinse und Fokussierlinse jeweils von 10 cm Brennweite im Abstand von
+\subsection{Verfahren nach Abbe}
+Es sollen die Hauptebene und die Brennweite mit Hilfe der Formeln \eqref{eqn:g'} und \eqref{eqn:b'} bestimmt werden. Es wird eine Zerstreuungslinse und Fokussierlinse jeweils von 10 $10^{-2}$ m Brennweite im Abstand von
 \begin{equation}
   d = 6 \cdot 10^{-2} \, \text{m}
   \label{eqn:d}
 \end{equation}
-verwendet. Die Gegenstandsgröße des Objektes beträgt 
+verwendet. Die Gegenstandsgröße des Objektes beträgt
 \begin{equation}
   G = 3 \cdot 10^{-2} m \ .
   \label{eqn:G}
 \end{equation}
-Die Messwerte sind in Tabelle \ref{tab:mabbe} aufgetragen. 
+Die Messwerte sind in Tabelle \ref{tab:mabbe} aufgetragen.
 \begin{table}
   \centering
   \begin{tabular}{c c c c}
     \toprule
-    	$g$ / cm & $b$ / cm & $B$ /cm & $V$ \\
-    \midrule	
+    	$g$ / $10^{-2}$ m & $b$ / $10^{-2}$ m & $B$ / $10^{-2}$ m & $V$ \\
+    \midrule
 	104.4	& 15.6	& 14.8	& 4.93	\\
 	99.0	& 16.0	& 13.5	& 4.50	\\
 	93.7	& 16.3	& 12.5	& 4.17	\\
@@ -187,7 +187,7 @@ Die Messwerte sind in Tabelle \ref{tab:mabbe} aufgetragen.
   \caption{Messwerte zur Bestimmung der Brennweite mittels Abbemethode}
   \label{tab:mabbe}
 \end{table}
-Es wird zunächst eine lineare Regression entsprechend Gleichung \eqref{eqn:g'} durchgeführt und die Fitparameter $f_\text{g}$ und $h$ ermittelt. Anhand derer kann man aus der Steigung des Graphens und den Schnittpunkten mit der Achse die Hauptebenen und die Brennweiten berechnen.
+Es wird zunächst eine lineare Regression entsprechend Gleichung \eqref{eqn:g'} durchgeführt und die Fitparameter $f_\text{g}$ und $h$ ermittelt. Anhand derer kann ??man?? aus der Steigung des Graphens und den Schnittpunkten mit der Achse die Hauptebenen und die Brennweiten berechnen.
 \begin{figure}
   \centering
     \includegraphics[height=8cm]{Abbe1.pdf}
@@ -201,18 +201,17 @@ Der Fit durch die Messwerte ist in Abbildung \ref{eqn:Gfit} zu sehen.
   \caption{Gegenstandsweiten Fit}
   \label{fig:Bfit}
 \end{figure}
-Der Fit der Form von Gleichung \eqref{eqn:b'} ergibt die Brennweiten und die Laage der Hauptebenen
+Der Fit der Form von Gleichung \eqref{eqn:b'} ergibt die Brennweiten und die Lage der Hauptebenen
 \begin{eqnarray}
-  f_\text{g} &= (\num{ 15.9 +- 0.3}) \cdot 10^{-2} \, \text{m} \\ 
+  f_\text{g} &= (\num{ 15.9 +- 0.3}) \cdot 10^{-2} \, \text{m} \\
   f_\text{b} &= (\num{ 17.5 +- 0.1 }) \cdot 10^{-2} \, \text{m} \\
   h &= (\num{ 11 +- 1}) \cdot 10^{-2} \, \text{m} \\
-  h' &= (\num{ -5.3 +- 0.2}) \cdot 10^{-2} \,\text{m} 
+  h' &= (\num{ -5.3 +- 0.2}) \cdot 10^{-2} \,\text{m}
   \label{eqn:abbedf}
 \end{eqnarray}
-Die theoretische Brennweite des Systems berechnet sich aus Modifikation von Formel \eqref{eqn:D} um einen Korrekturfaktor zu 
+Die theoretische Brennweite des Systems berechnet sich aus der Modifikation von Formel \eqref{eqn:D} um einen Korrekturfaktor zu
 \begin{eqnarray}
   \frac{1}{f} &= \frac{1}{f_1} + \frac{1}{f_2} - \frac{d}{f_1 * f_2} \\
   f &= 16.6 \cdot 10^{-2} \, m \ .
   \label{tabbe}
 \end{eqnarray}
-
