--- a/14-26.April/content/diskussion.tex
+++ b/14-26.April/content/diskussion.tex
@@ -1,6 +1,6 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Generell ist die Bestimmung eines scharfen Bildes recht objektiv. Es kann nicht immer ein eindeutiger Punkt gefunden werden, sondern eher ein ganzer Bereich wo das Bild scharf zu seien scheint. Daher wurde versucht die Schärfe an bestimmten Merkmalen an der Gestalt des Bildes reproduzierbar zu machen. 
+Generell ist die Bestimmung eines scharfen Bildes recht subjektiv. Es kann nicht immer ein eindeutiger Punkt gefunden werden, sondern eher ein ganzer Bereich wo das Bild scharf zu sein scheint. Daher wurde versucht die Schärfe an bestimmten Merkmalen an der Gestalt des Bildes reproduzierbar zu machen.
 \begin{table}
   \centering
   \begin{tabular}{c| l | c |r}
@@ -23,8 +23,7 @@ Generell ist die Bestimmung eines scharfen Bildes recht objektiv. Es kann nicht 
   \label{tab:über}
 \end{table}
 Die Linsengleichung scheint als bestätigt da die Werte lediglich um 3.5 \% von den Theoretischen abweichen und dies im Rahmen der Messunsicherheit dieses Versuches aufgrund des oben gennante Problems liegt.
-Die Bekannte Linse wurde mit einem Messfehler von 2 \% bestimmt, was als gelungene Messung eingestuft werden kann. 
+Die Bekannte Linse wurde mit einem Messfehler von 2 \% bestimmt, was als gelungene Messung eingestuft werden kann.
 %Bei der Unbekannten Linse beträgt der Fehler 26 \%. Dabei fällt auf das wenn der Brennpunkt im Plott auf die y-Achse projeziert werden würde, dies einer Brennweite von 15 cm entsprechen würde. Da aber der Fehler bei dem Brennpunkt welcher auf  die x-Achse jedoch groß ist, kommt solch ein großer Fehler zu stande. Diesliegt womöglich daran, dass ein Bild welches rein Objektiv als scharf empfunden wird, dies nicht wirklich ist.
 Die mittels der Besselmethode bestimmte Brennweite für weißes Licht beträgt 9.7 cm. Dies entspricht einer relativen Abweichung von 3 \% von der Herstellerangabe. Des weiteren wird ermittelt das die Brechkraft der Linse bei rotem Licht geringer als die vom Blauen ist.
-Die mittels Abbemethode ermittelten Brennweiten weichen um bis zu 5 \% von dem Theorie wert ab. Mittelt man die beiden ermittelten Messwerte zuerst ist die Messunsicherheit kleiner als 1 \% . 
-
+Die mittels Abbemethode ermittelten Brennweiten weichen um bis zu 5 \% von dem Theorie wert ab. Mittelt man die beiden ermittelten Messwerte zuerst ist die Messunsicherheit kleiner als 1 \% .
