--- a/00-Vorlage/lit.bib
+++ b/00-Vorlage/lit.bib
@@ -1,6 +1,7 @@
 @manual{sample,
   author = {TU Dortmund},
   title = {Versuch zum Literaturverzeichnis},
-  year = 2014,
+  year = 2016,
+  month = 05,  
   address = {Link einfügen},
 }
