--- a/16-10.Mai/lit.bib
+++ b/16-10.Mai/lit.bib
@@ -2,6 +2,7 @@
   author = {TU Dortmund},
   title = {Versuch 501},
   year = 2016,
+  month = 05,
   address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V501.pdf},
 }
 
@@ -9,5 +10,6 @@
   author = {TU Dortmund},
   title = {Versuch 502},
   year = 2016,
+  month = 05,
   address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V502.pdf},
 }
