--- a/16-10.Mai/content/theorie.tex
+++ b/16-10.Mai/content/theorie.tex
@@ -6,9 +6,9 @@ In den beiden folgenden Experimenten soll die Ablenkung von Elektronen im elektr
 \subsection{Aufbau der Kathodenstrahlröhre}
 Die beiden Versuche werden in einem Hochvakuum durchgeführt, da die Elektronen sonst mit den Luftmolekülen wechselwirken würden. Dazu wird die Kathodenstrahlröhre (Braunsche Röhre) verwendet. Diese besteht aus drei Hauptkomponenten: der Elektronenkanone, einem Ablenksystem und einem Nachweissystem.\\
 \textbf{Die Elektronenkanone:} \\
-Die Elektronenkanone erzeugt freie Elektronen durch Glühemission und beschleunigt diese. Da zu wird ein Kathode indirekt beheizt. Diese wird von dem Wehnelt-Zylinder umgeben welcher die Intensität des Elektronenstrahls steuert. Die Elektronen werden durch die nachfolgenden Elektroden beschleunigt. Danach werden die beschleunigten Elektronen Fokussiert. \\
+Die Elektronenkanone erzeugt freie Elektronen durch Glühemission und beschleunigt diese. Dazu wird ein Kathode indirekt beheizt und von dem Wehnelt-Zylinder umgeben, welcher die Intensität des Elektronenstrahls steuert. Die Elektronen werden durch die nachfolgenden Elektroden beschleunigt und Fokussiert. \\
 \textbf{Das Ablenksystem:} \\
-Das Ablenksystem besteht aus zwei, zueinander parrallelen Kondensatorplatten, welche ein annähernd homogenes elektrisches Feld erzeugen in dem die Elektronen Abgelenkt werden. Sollen die Elektronen in eine weitere Richtung abgelenkt werden wird ein weiteres Plattenpaar um 90 Grad versetzt eingebaut. \\
+Das Ablenksystem besteht aus zwei, zueinander parallelen Kondensatorplatten, welche ein annähernd homogenes elektrisches Feld erzeugen in dem die Elektronen abgelenkt werden. Sollen die Elektronen in eine weitere Richtung abgelenkt werden wird ein weiteres Plattenpaar um 90 Grad versetzt eingebaut. \\
 \textbf{Das Nachweissystem:} \\
 Das Nachweissystem visualisiert den auftrefenden Elektronenstrahl.\\
 In der nachfolgenden Abbildung wird der Sachverhalt verdeutlicht.
@@ -44,7 +44,7 @@ Mit dem Abstand $L$ zwischen Kondensator und Nachweissystem. \\
 	\label{fig:AblenkungE}
 \end{figure}
 
-Um möglichst genaue Messergebnisse erzielen zu können müssen daher $L$ und $p$ möglichst groß und $U_\text{B}$ möglichst klein gewählt werden. Allerdings können an einer solchen Röhre nur Wechselspannungen mit kleiner Frequenz untersucht werden. Um Wechselspannungenn mit hoher Frequenz zu untersuchen muss eine Kathodenstrahlröhre mit kleinem $p$ und großem $U_\text{B}$ gewählt werden.
+Um genaue Messergebnisse erzielen zu können müssen daher $L$ und $p$ möglichst groß und $U_\text{B}$ möglichst klein gewählt werden. Allerdings können an einer solchen Röhre nur Wechselspannungen mit kleiner Frequenz untersucht werden. Um Wechselspannungenn mit hoher Frequenz zu untersuchen muss eine Kathodenstrahlröhre mit kleinem $p$ und großem $U_\text{B}$ gewählt werden.
 
 \subsection{Ablenkung von Elektronen im B-Feld}
 Im Gegensatz zum elektrischen Feld, erzeugen magnetische Felder nur Kräfte auf relativ zum Feld bewegte Ladung. Diese Kraft wird Lorentz-Kraft $\vec{F}_\text{L}$ genannt.
@@ -67,13 +67,19 @@ Mit $e_0$ als Elementarladung und $m_0$ als Elektronenmasse. \\
 	\label{fig:AblenkungB}
 \end{figure}
 
-Mit $v_0 = \sqrt{2 U_\text{B} \frac{e_0}{m_0}}$ und der Abbildung \eqref{fig:AblenkungB} folgt die Bestimmungsgleichung für Ladung eines Elektrons,
+Mit $v_0 = \sqrt{2 U_\text{B} \frac{e_0}{m_0}}$ und der Abbildung \eqref{fig:AblenkungB} folgt die Bestimmungsgleichung für die Ladung eines Elektrons zu:
 \begin{equation}
 	\frac{D}{L^2 + D^2} = \frac{1}{\sqrt{8 U_\text{B}}} \sqrt{\frac{e_0}{m_0}} B
 \end{equation}
-Mit der Verschiebung $D$ und dem Wirkungsbereich des Magnetfeldes $L$.
+Mit der Verschiebung $D$ und dem Wirkungsbereichsa des Magnetfeldes $L$.
 
-
+\subsection{Magnetfeld einer Helmholtzspule}
+Eine Helmholtzspule wird oft verwendet wenn ein annähernd homogenes Magnetfeld benötigt wird. Sie besteht aus zwei Ringspulen, mit Radius $R$ und Windungszahl $N$, welche parallel zueinander aufgebaut sind. Das Magnetfeld einer Helmholtzspule lässt sich aus
+\begin{center}
+	\large{$B = \mu_0 \frac{8}{\sqrt{125}} \frac{N I}{R}$} \\
+	\small{(I = \text{Spulenstrom}, $\mu_0$ = \text{Magnetische Feldkonstante})}
+\end{center}
+berechnen.
 
 
 
