--- a/16-10.Mai/content/auswertung.tex
+++ b/16-10.Mai/content/auswertung.tex
@@ -1,3 +1,38 @@
 \section{Auswertung}
 \label{sec:Auswertung}
+\subsection{Ablenkung von Elektronen durch das Magnetfeld}
+In Tabelle \ref{tab:DIS} sind die Stromstärken $I_\text{S}$ zu den Entsprechenden Auslenkungen $D$ aufgetragen.
+\begin{table}
+  \centering
+  \begin{tabular}{c| c c c c c }
+    \toprule
+    $D / \frac{Zoll}{4}$ & $U_\text{B}$ = 250 V & $U_\text{B}$ = 300 V & $U_\text{B}$ = 350 V & $U_\text{B}$ = 400 V & $U_\text{B}$ = 450 V \\
+    \midrule
+    1 &	0	&0	&0	&0	&0	\\
+    2 &	0.27	&0.34	&0.37	&0.42	&0.41	\\
+    3 &	0.63	&0.70	&0.74	&0.83	&0.85	\\
+    4 &	0.95	&1.05	&1.15	&1.25	&1.30	\\	
+    5 &	1.27	&1.40	&1.55	&1.61	&1.73	\\
+    6 &	1.57	&1.76	&1.91	&2.01	&2.15	\\
+    7 &	1.92	&2.11 	&2.27	&2.47	&2.59	\\
+    8 &	2.23	&2.45	&2.67	&2.91	&3.02	\\
+    9 &	2.53	&2.81	&3.02	&/	&/	\\
+    \bottomrule
+  \end{tabular}
+  \caption{Auslenkung der Elektronen in Abhägigkeit des Spulenstroms bei unterschiedlichen Beschleunigungsspannungen}
+  \label{tab:DIS}
+\end{table}
+Anhand derer lassen sich durch verwendung Gleichung \eqref{eqn:} die magnetischen Feldstärken errechnen. Diese werden in Diagramm \ref{fig:bfeld} gegen D/(L²+D²) aufgetragen sowie ein linearer Fit durch die Messpunkte gelegt. 
+\begin{figure}
+  \centering
+  \includegraphics[height=7cm]{B-Feld.pdf}
+  \caption{<+caption text+>}
+  \label{fig:bfeld}
+\end{figure}
+Aus den Steigungen $a$ der Fitts lassen sich durch Umformung der Gleichung \eqref{eqn:} zu,
+\begin{equation}
+  \frac{e_0}{m_0} = \left( a \cdot \sqrt{8 U_\text{B}} )^2 \right)
+  \label{eqn:e0m0}
+\end{equation}
+die spezifische Ladung der Elektronen berechnen. Die zu den zugehörigen Beschleunigungspannungen spezifische Ladungen sind in Tabelle \ref{tab:} mit ihrer realtiven Abweichung von ihrem Literaturwert \sample{spez} aufgetragen. 
 
